Fixed tooltips causing page overflow

--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ body::after {
     overflow-y: auto;
 }
 
-.content > a {
+.content > span {
     margin: 8px;
 }
 
@@ -201,6 +201,17 @@ a:visited {
 @media (max-width: 616px) {
     .main {
         border: none;
+    }
+
+    .has-tooltip .tooltip-right-edge {
+        right: -25%;
+        left: unset;
+        margin-left: unset;
+    }
+
+    .has-tooltip .tooltip-left-edge {
+        left: -25%;
+        margin-left: unset;
     }
 }
 
